--- a/styles.scss
+++ b/styles.scss
@@ -1,9 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@800&family=Open+Sans:wght@400;500;700&display=swap');
 
-$font-main: 'Open Sans', sans-serif;;
+
+$font-main: 'Open Sans', sans-serif;
+$font-header: 'M PLUS Rounded 1c', sans-serif;
 
 $color-background: #111111;
 $color-text: #fff;
+$color-shadow: #5c5c5c;
 
 $color-buttons-main: #343232;
 $color-hover-main: #606060;
@@ -27,11 +30,23 @@ body {
 
 // basic styling of h1 and generic styling for buttons
 
-h1 {
-    color: #362828;
-    text-align: center;
-    margin: 5vh auto;
+hr {
+    border-color: $color-buttons-main;
+    border-style: dotted none none;
+    border-width: 10px;
+    height: 0px;
+    width:50%;
+    margin: auto;
+    opacity: 0.7;
+}
 
+h1 {
+    color: $color-background;
+    text-align: center;
+    margin: 5vh auto 3vh;
+    font-family: $font-header;
+    font-size: 2.2rem;
+    text-shadow: -2px 2px 5px $color-shadow;
 }
 
 button {
@@ -69,7 +84,7 @@ button {
 // calculator's body styling
 
 .calculator {
-    margin: auto;
+    margin: 8vh auto;
     height: 600px;
     max-width: 350px;
     border-radius: 20px;
@@ -77,6 +92,8 @@ button {
     flex-direction: column;
     justify-content: space-around;
     background-color: $color-background;
+    box-shadow: -15px 15px 15px $color-shadow;
+
 
     &__screen {
         height: 15%;
@@ -112,4 +129,16 @@ button {
             color: $color-operators;
         }
     }
+}
+
+
+@media screen and (max-height: 830px) {
+    header {
+        display: none;
+    }
+
+    .calculator {
+        margin: 3vh auto;
+    }
+
 }
