--- a/styles.scss
+++ b/styles.scss
@@ -4,15 +4,16 @@
 $font-main: 'Open Sans', sans-serif;
 $font-header: 'M PLUS Rounded 1c', sans-serif;
 
-$color-background: #111111;
-$color-text: #fff;
+$color-background: #121c24;
+$color-text: #cbd8df;
 $color-shadow: #5c5c5c;
 
-$color-buttons-main: #343232;
-$color-hover-main: #606060;
+$color-buttons-main: #0e2935;
+$color-hover-main: #d7f9f8;
 
-$color-top-row: #787878;
-$color-operators: #f5ac24;
+$color-top-row: #9ac5d3;
+$color-operators: #159ab7;
+
 
 // reset styling and set color of everything to white + body's background
 
@@ -25,10 +26,19 @@ $color-operators: #f5ac24;
 
 body {
     height: 100%;
-    background-image: linear-gradient(to right, #656565, #959595, #a8a8a8);
+    background-image: linear-gradient(to right, #656565, #a8a8a8);
 }
 
-// basic styling of h1 and generic styling for buttons
+// basic styling of header and generic styling for buttons
+
+h1 {
+    color: $color-background;
+    text-align: center;
+    margin: 5vh auto 3vh;
+    font-family: $font-header;
+    font-size: 2.2rem;
+    text-shadow: -2px 2px 5px $color-shadow;
+}
 
 hr {
     border-color: $color-buttons-main;
@@ -40,17 +50,7 @@ hr {
     opacity: 0.7;
 }
 
-h1 {
-    color: $color-background;
-    text-align: center;
-    margin: 5vh auto 3vh;
-    font-family: $font-header;
-    font-size: 2.2rem;
-    text-shadow: -2px 2px 5px $color-shadow;
-}
-
 button {
-    display: inline-block;
     background-color: $color-buttons-main;
     display: inline-block;
     height: 4.5rem;
@@ -59,9 +59,11 @@ button {
     margin: auto;
     border: none;
     font-size: 1.7rem;
+    box-shadow: 0px 2px 5px #235b75, inset 0px 2px 1px #b1b1b1;
 
     &:hover {
-        background-color: $color-hover-main;
+        cursor: pointer;
+        box-shadow: inset -1px 2px 5px $color-shadow;
     }
 }
 
@@ -69,7 +71,7 @@ button {
 
 .zero {
     grid-column: 1/3;
-    width: 100%;
+    width: 95%;
     border-radius: 50px;
 }
 
@@ -78,8 +80,6 @@ button {
 #minus {
     padding-bottom: 0.5rem;
 }
-
-
 
 // calculator's body styling
 
@@ -92,7 +92,15 @@ button {
     flex-direction: column;
     justify-content: space-around;
     background-color: $color-background;
-    box-shadow: -15px 15px 15px $color-shadow;
+    box-shadow: -11px 11px 10px $color-shadow;
+
+
+    &:hover {
+        cursor: pointer;
+        transform: translate(3px, -3px);
+        transition-duration: 100ms;
+        box-shadow: -15px 15px 15px $color-shadow;
+    }
 
 
     &__screen {
@@ -112,20 +120,35 @@ button {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    }
 
+    &__number,
+    &__decimal {
+        box-shadow: 0px 2px 5px #163a4a, inset 0px 2px 1px #4f4f4f;
+
+        &:hover {
+            background-color: $color-top-row;
+            color: $color-background;
+            box-shadow: inset -1px 2px 20px $color-shadow;
+        }
     }
 
     &__top-row {
         background-color: $color-top-row;
+        color: $color-background;
+
+        &:hover {
+            background-color: $color-text;
+        }
     }
 
     &__operator,
     &__equals {
         background-color: $color-operators;
-        font-size: 2.5rem;
+        font-size: 2.3rem;
 
         &:hover {
-            background-color: $color-text;
+            background-color: $color-hover-main;
             color: $color-operators;
         }
     }
@@ -133,6 +156,7 @@ button {
 
 
 @media screen and (max-height: 830px) {
+    
     header {
         display: none;
     }
