--- a/styles.scss
+++ b/styles.scss
@@ -156,7 +156,7 @@ button {
     }
 
     &__operator,
-    &__equals {
+    &__equal {
         background-color: $color-operators;
         font-size: 2.3rem;
 
@@ -166,6 +166,7 @@ button {
             color: $color-operators;
         }
     }
+
 }
 
 // light mode styling
