--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,7 @@ h1 {
   margin: 3vh auto 1vh;
   font-family: "M PLUS Rounded 1c", sans-serif;
   font-size: 2.2rem;
-  color: #121c24;
-  text-shadow: -2px 2px 5px #5c5c5c;
+  text-transform: uppercase;
 }
 
 hr {
@@ -41,6 +40,15 @@ button {
 button:hover {
   cursor: pointer;
   box-shadow: inset -1px 2px 5px #5c5c5c;
+}
+
+.colored-text {
+  background-image: linear-gradient(to right, #1f0b64 0%, #57169d 33%, #ff0055 66%, #fef614 100%);
+  background-size: 200% auto;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: change-color 6s linear 1;
 }
 
 .zero {
@@ -122,6 +130,7 @@ button:hover {
 }
 .light-mode h1 {
   color: #cbd8df;
+  text-shadow: -2px 2px 3px #5c5c5c;
 }
 .light-mode .change-mode {
   background-color: #9ac5d3;
@@ -191,5 +200,10 @@ button:hover {
 
   .light-mode hr {
     border-color: #cbd8df;
+  }
+}
+@keyframes change-color {
+  to {
+    background-position: -200% center;
   }
 }
