--- a/styles.scss
+++ b/styles.scss
@@ -43,10 +43,9 @@ header {
 
 h1 {
     margin: 3vh auto 1vh;
-    font-family: $font-header;
+    font-family: "M PLUS Rounded 1c", sans-serif;
     font-size: 2.2rem;
-    color: $color-background;
-    text-shadow: -2px 2px 5px $color-shadow;
+    text-transform: uppercase;
 }
 
 hr {
@@ -68,6 +67,21 @@ button {
         cursor: pointer;
         box-shadow: inset -1px 2px 5px $color-shadow;
     }
+}
+
+.colored-text {
+    background-image: linear-gradient(
+        to right,
+        #1f0b64 0%,
+        #57169d 33%,
+        #ff0055 66%,
+        #fef614 100%
+    );
+    background-size: 200% auto;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: change-color 6s linear 1;
 }
 
 // additional button styling
@@ -106,12 +120,9 @@ button {
     background-color: $color-background;
     box-shadow: -15px 15px 15px $color-shadow;
 
-
-
     &:hover {
         cursor: pointer;
     }
-
 
     &__screen {
         height: 22%;
@@ -176,6 +187,7 @@ button {
 
     h1 {
         color: $color-text;
+        text-shadow: -2px 2px 3px #5c5c5c;
     }
 
     .change-mode {
@@ -267,5 +279,11 @@ button {
         hr {
             border-color: $color-text;
         }
+    }
+}
+
+@keyframes change-color {
+    to {
+        background-position: -200% center;
     }
 }
