--- a/styles.scss
+++ b/styles.scss
@@ -1,289 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@800&family=Open+Sans:wght@400;500;700&display=swap');
-
-
-$font-main: 'Open Sans', sans-serif;
-$font-header: 'M PLUS Rounded 1c', sans-serif;
-
-$color-background: #121c24;
-$color-text: #cbd8df;
-
-$color-shadow: #5c5c5c;
-$color-box-shadow: #b1b1b1;
-
-$color-buttons-main: #0e2935;
-$color-hover-main: #d7f9f8;
-
-$color-top-row: #9ac5d3;
-$color-operators: #159ab7;
-
-$gradient-dark: linear-gradient(to right, #656565, #a8a8a8);
-
-// for light theme
-$color-buttons-light: #1e5067;
-$gradient-light: linear-gradient(to right, #19849c, #4cba9b);
-
-// reset styling and set color of everything to white + body's background
-
-* {
-    padding: 0;
-    margin: 0;
-    font-family: $font-main;
-    color: $color-text;
-}
-
-body {
-    height: 100%;
-    background-image: $gradient-dark;
-}
-
-// basic styling of header and generic styling for buttons
-header {
-    text-align: center;
-}
-
-h1 {
-    margin: 3vh auto 1vh;
-    font-family: "M PLUS Rounded 1c", sans-serif;
-    font-size: 2.2rem;
-    text-transform: uppercase;
-}
-
-hr {
-    display: none;
-}
-
-button {
-    background-color: $color-buttons-main;
-    display: inline-block;
-    height: 4.5rem;
-    width: 4.5rem;
-    border-radius: 50%;
-    margin: auto;
-    border: none;
-    font-size: 1.7rem;
-    box-shadow: 0px 2px 5px #235b75, inset 0px 2px 1px $color-box-shadow;
-
-    &:hover {
-        cursor: pointer;
-        box-shadow: inset -1px 2px 5px $color-shadow;
-    }
-}
-
-.colored-text {
-    background-image: linear-gradient(
-        to right,
-        #1f0b64 0%,
-        #57169d 33%,
-        #ff0055 66%,
-        #fef614 100%
-    );
-    background-size: 200% auto;
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation: change-color 6s linear 1;
-}
-
-// additional button styling
-
-.zero {
-    grid-column: 1/3;
-    width: 95%;
-    border-radius: 50px;
-}
-
-
-#times,
-#minus {
-    padding-bottom: 0.5rem;
-}
-
-.change-mode {
-    height: 4rem;
-    width: 18rem;
-    border-radius: 25px;
-    font-size: 1.3rem;
-    padding: 5px;
-}
-
-
-// calculator's body styling
-
-.calculator {
-    margin: 5vh auto;
-    height: 600px;
-    max-width: 350px;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: $color-background;
-    box-shadow: -15px 15px 15px $color-shadow;
-
-    &:hover {
-        cursor: pointer;
-    }
-
-    &__screen {
-        height: 22%;
-    }
-
-    &__display {
-        font-size: 5rem;
-        padding-top: 20px;
-        text-align: right;
-        margin-right: 1rem;
-        margin-top: 1rem;
-    }
-
-    &__buttons {
-        margin: 0 0.5rem;
-        height: 70%;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-    }
-
-    &__number,
-    &__decimal {
-        box-shadow: 0px 2px 5px #163a4a, inset 0px 2px 1px #4f4f4f;
-
-        &:hover,
-        &:focus {
-            background-color: $color-top-row;
-            color: $color-background;
-            box-shadow: inset -1px 2px 20px $color-shadow;
-        }
-    }
-
-    &__top-row {
-        background-color: $color-top-row;
-        color: $color-background;
-
-        &:hover,
-        &:focus {
-            background-color: $color-text;
-        }
-    }
-
-    &__operator,
-    &__equal {
-        background-color: $color-operators;
-        font-size: 2.3rem;
-
-        &:hover,
-        &:focus  {
-            background-color: $color-hover-main;
-            color: $color-operators;
-        }
-    }
-
-}
-
-// light mode styling
-
-.light-mode {
-    background-image: $gradient-light;
-
-    h1 {
-        color: $color-text;
-        text-shadow: -2px 2px 3px #5c5c5c;
-    }
-
-    .change-mode {
-        background-color: $color-top-row;
-        color: $color-background;
-    }
-
-    .calculator {
-        background-color: $color-text;
-        box-shadow: -15px 15px 15px rgba(137, 137, 137, 0.55);
-
-
-        &__display {
-            color: $color-buttons-light;
-        }
-
-        &__number,
-        &__decimal {
-            background-color: $color-buttons-light;
-            &:hover,
-            &:focus {
-                background-color: $color-top-row;
-                box-shadow: inset -1px 2px 12px $color-shadow;
-
-            }
-        }
-
-        &__top-row {
-            box-shadow: 0px 2px 5px #afafaf, inset 0px 2px 1px $color-box-shadow;
-
-            &:hover,
-            &:focus {
-                background-color: $color-box-shadow;
-                opacity: 0.8;
-            }
-        }
-    }
-    
-}
-
-// media queries
-
-@media screen and (max-height: 750px) {
-    .change-mode {
-        margin-top: 1vh;
-    }
-}
-
-@media screen and (max-height: 895px) {
-
-    h1 {
-        display: none;
-    }
-
-    .change-mode {
-        margin-top: 5vh;
-        height: 2.7rem;
-        width: 15rem;
-        border-radius: 25px;
-        font-size: 1rem;
-        padding: 5px;
-    }
-
-    .calculator {
-        margin: 1.5vh auto;
-    }
-
-}
-
-@media screen and (min-width: 768px) and (min-height: 940px) {
-
-    .change-mode {
-        margin: 2rem auto;
-    }
-
-    hr {
-        display: block;
-        border-color: $color-buttons-main;
-        border-style: dotted none none;
-        border-width: 10px;
-        height: 0px;
-        width:50%;
-        margin: auto;
-        opacity: 0.7;
-        margin-top: 1vh;
-    }
-
-    .light-mode {
-        hr {
-            border-color: $color-text;
-        }
-    }
-}
-
-@keyframes change-color {
-    to {
-        background-position: -200% center;
-    }
-}
+@use "./styles/variables" as *;
+@use "./styles/main";
+@use "./styles/calculator";
+@use "./styles/light";
+@use "./styles/media";
