--- a/styles.css
+++ b/styles.css
@@ -51,17 +51,6 @@ button:hover {
   animation: change-color 6s linear 1;
 }
 
-.zero {
-  grid-column: 1/3;
-  width: 95%;
-  border-radius: 50px;
-}
-
-#times,
-#minus {
-  padding-bottom: 0.5rem;
-}
-
 .change-mode {
   height: 4rem;
   width: 18rem;
@@ -70,6 +59,11 @@ button:hover {
   padding: 5px;
 }
 
+@keyframes change-color {
+  to {
+    background-position: -200% center;
+  }
+}
 .calculator {
   margin: 5vh auto;
   height: 600px;
@@ -123,6 +117,15 @@ button:hover {
 .calculator__operator:hover, .calculator__operator:focus, .calculator__equal:hover, .calculator__equal:focus {
   background-color: #d7f9f8;
   color: #159ab7;
+}
+.calculator .zero {
+  grid-column: 1/3;
+  width: 95%;
+  border-radius: 50px;
+}
+.calculator #times,
+.calculator #minus {
+  padding-bottom: 0.5rem;
 }
 
 .light-mode {
@@ -200,10 +203,5 @@ button:hover {
 
   .light-mode hr {
     border-color: #cbd8df;
-  }
-}
-@keyframes change-color {
-  to {
-    background-position: -200% center;
   }
 }
